appId: app.verxion.native
name: Months Screen
tags:
  - progress
---
- runFlow: ../auth/login.yaml
- tapOn: "Progress"
- waitForAnimationToEnd

- scroll:
    direction: DOWN
    speed: SLOW

- tapOn:
    text: "Months"
    optional: true
- waitForAnimationToEnd

- assertVisible:
    text: "Months"
    optional: true
